# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  config.txt  coverage.xml  pyproject.toml  tasks.py  test.db
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
dokumentaatio/diagrammikoodit/: kirjautuminen.txt  kirjautuminen_uutena_kayttajana.txt  oman_kysymyksen_lisaaminen.txt  pelivuoron_kulku.txt  uuden_pelin_aloitus.txt
laskarit/: pyproject.toml
laskarit/viikko1/: gitlog.txt
laskarit/viikko3/: 3_sekvenssikaavio.txt  4_sekvenssikaavio.txt  monopoly_luokkakaavio_1.txt  monopoly_luokkakaavio_2.txt
src/: board.py  config.py  custom_questions.py  index.py  login.py  settings.py  todos.py
src/WIP/: game_services.py  game_view.py  player_tokens.py  statistics_view.py  todos.py
src/archive/: board_pygame.py
src/entities/: board.py  category_board.py  game.py  game_board.py  player.py  player_tokens.py  question.py  rules.py  scoreboard.py  settings.py  user.py
src/repositories/: database_services.py
src/services/: ask_question.py  bind_keys.py  create_question.py  create_user.py  custom_content_services.py  custom_questions_services.py  database.py  database_connection.py  database_operations.py  database_services.py  game_services.py  login_service.py  login_services.py  resize_window.py  rules_services.py  settings_services.py  ui_services.py  view_manager.py
src/tests/: custom_content_services_test.py  game_services_test.py  login_services_test.py  question_test.py  user_test.py  (+1 more)
(+33 files in other folders)
